@@ -1,4 +1,5 @@
 2010-07-21	Hannes von Haugwitz <hannes@vonhaugwitz.com>
+	* Always save the inode to database (needed for DB_CHECKINODE)
 	* Documented ftype and e2fsattrs in aide.conf
 	* Added TFTYPE token
 	* Prompt for ./configure and make only if autoreconf was successful
